# model-context-playground

./: .gitignore  README.md  pyproject.toml
.project/: SPECS.md  TASKS.md
.project/specs/: SPEC-01-simple-math-agent-mcp.md
.project/tasks/: TASK-01-setup-mcp-server.md  TASK-02-implement-add-tool.md  TASK-03-setup-agent.md
playground/: __init__.py  agent.py  main.py  mcp_client.py  mcp_server.py
src/model_context_playground/mcp_server/: main.py
tests/agent/: test_agent.py
tests/mcp_server/: conftest.py  test_integration.py  test_main.py
vdab_sollicitaties/: README.md  add_application.py  company_list.txt  main.py  pyproject.toml
