[project]
name = "model-context-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonatan Snyders", email = "jonatansnyders@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
model-context-playground = "model_context_playground:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
